@@ -41,6 +41,7 @@
  */
 
 static int initialized = 0;
+static const TCHAR classname[] = TEXT("TclSocket");
 TCL_DECLARE_MUTEX(socketMutex)
 
 /*
@@ -247,12 +248,12 @@ InitSockets(void)
 	windowClass.hInstance = TclWinGetTclInstance();
 	windowClass.hbrBackground = NULL;
 	windowClass.lpszMenuName = NULL;
-	windowClass.lpszClassName = "TclSocket";
+	windowClass.lpszClassName = classname;
 	windowClass.lpfnWndProc = SocketProc;
 	windowClass.hIcon = NULL;
 	windowClass.hCursor = NULL;
 
-	if (!RegisterClassA(&windowClass)) {
+	if (!RegisterClass(&windowClass)) {
 	    TclWinConvertError(GetLastError());
 	    goto initFailure;
 	}
@@ -394,7 +395,7 @@ SocketExitHandler(
      */
 
     TclpFinalizeSockets();
-    UnregisterClass("TclSocket", TclWinGetTclInstance());
+    UnregisterClass(classname, TclWinGetTclInstance());
     WSACleanup();
     initialized = 0;
     Tcl_MutexUnlock(&socketMutex);
@@ -2192,7 +2193,7 @@ SocketThread(
      * Create a dummy window receiving socket events.
      */
 
-    tsdPtr->hwnd = CreateWindow("TclSocket", "TclSocket",
+    tsdPtr->hwnd = CreateWindow(classname, classname,
 	    WS_TILED, 0, 0, 0, 0, NULL, NULL, windowClass.hInstance, arg);
 
     /*
